about hecho y responsive

--- a/client/src/views/about/about.module.css
+++ b/client/src/views/about/about.module.css
@@ -18,43 +18,79 @@
   border-radius: 3px;
 
 }
+
 /* styles.css */
 
 .About {
-    background-color: #F3F3F3;
-    padding: 20px;
+    width: 100%;
+    max-width: 100%;
+    background-color: rgb(220, 220, 220);
     font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 70vh;
+    padding: 20px;
+    align-items: center;
 }
 
-.AboutContent {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-}
 
 .Copyright {
     font-size: 1.5em;
     font-weight: 700;
-    margin-bottom: 30px;
     color: #333;
+    margin-top: 30px;
 }
 
 /* Ajustes de presentación para la información del miembro del equipo */
-.MemberInfo {
+.MembersInfo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 16px;
-    gap: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    min-height: 50%;
 }
+    .MembersInfo__row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        min-width: 100%;
+    }
+        .MemberInfo {
+            display: flex;
+            margin: 10px
+        }
+    .iconsContainer {
+        display: flex;
+    }
 
-.MemberLinks {
-    margin-left: 16px;
-}
 
 /* Íconos de LinkedIn y GitHub */
 .LinkedInIcon, .GitHubIcon {
     width: 32px;
     height: 32px;
     margin: 0 8px;
+}
+
+@media screen and (max-width: 900px) {
+    .MemberInfo {
+        margin: 5px 50px
+    }
+}
+@media screen and (max-width: 635px) {
+    .MembersInfo {
+        height: auto;
+    }
+  
+    .MemberInfo {
+        margin: 5px 20px;
+    }
+
+    
+}
+
+@media screen and (max-width: 512px) {
+    .MemberInfo {
+        margin: 5px auto;
+    }
 }
