--- a/client/src/components/Profile/profile.module.css
+++ b/client/src/components/Profile/profile.module.css
@@ -24,3 +24,8 @@
     justify-content: center;
     align-items: center;
 }
+
+#aboutButton {
+    padding-top: 10px;
+    border-top: solid gray 1px;
+}
