--- a/client/src/views/QuestionCreateView/QuestionCreate.module.css
+++ b/client/src/views/QuestionCreateView/QuestionCreate.module.css
@@ -10,6 +10,7 @@
     height: 60vh;
     padding: 2rem;
     margin: 10px;
+    width: 90vw;
 }
 .div{
 
@@ -103,4 +104,20 @@ textarea:focus,input:focus {
     min-height: 2.4vh;
     max-height: 2.4vh;
     margin: 6px;
+}
+@media (max-width: 575.98px){
+    .form{
+        width: 80vw ;
+    }
+    .div{
+        width: 75vw;
+    }
+}
+@media (min-width: 575.98px){
+    .form{
+        width: 50vw ;
+    }
+    .div{
+        width: 45vw;
+    }
 }
