--- a/client/src/views/QuestionView/QuestionDetail.module.css
+++ b/client/src/views/QuestionView/QuestionDetail.module.css
@@ -316,6 +316,11 @@
     display: flex;
     flex-direction: column;
   }
+  .date{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
 }
 
 @media (max-width: 768px) {
