--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -17,6 +17,7 @@ body html {
 .containerCenter {
   display: flex;
   flex-direction: row;
+  
   min-height: 100vh;
   height: 100vh;
   width: 100vw;
@@ -25,7 +26,8 @@ body html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  width: 100%;
+  margin: 1rem;
 }
 .container {
     height: 80vh;
