--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -18,7 +18,6 @@ body html {
   display: flex;
   flex-direction: row;
   
-  min-height: 100vh;
   height: 100vh;
   width: 100vw;
 }
@@ -26,11 +25,10 @@ body html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  margin: 1rem;
+  width: 67vw;
+  /* margin: 1rem; */
 }
 .container {
-    height: 80vh;
     overflow-y: auto;  
   display: flex;
   flex-direction: column;
@@ -38,6 +36,7 @@ body html {
   margin-left: 6rem;
   height: 100vh;
   min-height: 100vh;
+  width: 60vw;
 }
 .contain h4 {
   font-family: "MiFuenteBold";
@@ -128,7 +127,8 @@ body html {
 }
 
 .loading {
-  margin: 1.1rem;
+  
+  margin-top: 1000rem;
 } 
 
 @media (max-width: 575.98px) {
