--- a/client/src/views/ForumView/Foro.module.css
+++ b/client/src/views/ForumView/Foro.module.css
@@ -128,10 +128,10 @@ body html {
 
 .loading {
   
-  margin-top: 1000rem;
+  margin-top: 1rem;
 } 
 
-@media (max-width: 575.98px) {
+@media only screen and (max-width: 575.98px) {
   .center h1 {
     width: 80vw;
     max-width: 88vw;
@@ -149,7 +149,7 @@ body html {
     font-size: 0.6rem;
 ;  }
 }
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   .containerCenter {
     display: flex;
     flex-direction: column;
@@ -165,6 +165,7 @@ body html {
   }
   .container{
     margin:0;
+    width: 100vw;
   }
   .contain h1{
     font-size: 1.5rem;
