--- a/client/src/views/PostDetailView/postDetail.module.css
+++ b/client/src/views/PostDetailView/postDetail.module.css
@@ -26,9 +26,17 @@
     align-items: center;
 }
 .textareaContainer{
-    height: 15;
-    width: 30vw;
-    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    width:50vw; 
+    align-items: center; 
+    justify-content: center;
+    text-align: center;
+}
+
+.p{
+    font-size:2rem;
+    margin: 0.5rem;
 }
 .textarea{
     height: 100px;
@@ -40,10 +48,10 @@
     border: #095084;
     color: #fff;
     display: block;
-    margin-left: 170px;
     transition: 0.2s;
     border-radius: 5px;
     cursor: pointer;
+    margin: 1rem;
 }
 .buttonError{
     padding: 0.5rem 1rem;
@@ -64,7 +72,7 @@
     display: flex;
     flex-direction: column;
     padding: 0.4rem;
-    width: 50vw;
+    width: 85vw;
     box-shadow: -1px 1px 8px rgba(209, 206, 206, 0.363);
     justify-content: center;
     height: fit-content;
@@ -165,17 +173,25 @@
 .avatar h3{
     margin: 1rem;
 }
-@media (max-width: 768px){
+@media only screen and (max-width: 575.98px){
 .contain{
     display: flex;
     flex-direction: column;
     width: fit-content;
+    
+}
+.avatar{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 .contain img{
     width: 100%;
 }
 .Detail{
-    width: fit-content;
+    width: 85vw;
 }
 .Detail a{
     font-size: 0.8rem;
