--- a/client/src/components/dashboard/UsersPosts/dashboard.module.css
+++ b/client/src/components/dashboard/UsersPosts/dashboard.module.css
@@ -222,14 +222,21 @@
     width: 100px;
   }
 }
+
 .button__flexDiv {
   display: flex;
   width: 90%;
   margin: 1rem auto 0 auto;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 1rem;
-}
 
+}
+@media(min-width: 768px){
+  .button__flexDiv {
+    justify-content: flex-end;
+
+  }
+}
 .button__selected {
   border: solid 1px #ddd;
   padding: 0.5rem;
