--- a/client/src/views/UserPostsView/userPosts.module.css
+++ b/client/src/views/UserPostsView/userPosts.module.css
@@ -86,9 +86,14 @@
     height: 450px;
     margin: 2rem auto;
     border: 1px solid #ddd;
+    width: 250px;
 
 }
-
+@media(min-width: 370px) {
+    .user__publication__card {
+        width: 320px;
+    }
+}
 @media(min-width: 990px) {
     .user__publication__card {
         width: 300px;
@@ -105,7 +110,9 @@
 .user__publication__h2 {
     text-align: center;
     margin: 1rem 0;
-
+    position: relative;
+    text-overflow: ellipsis;
+    overflow: hidden;
 
 
 }
